# treehouselondon

./: .gitignore  Caddyfile  README.md  manage.py  pyproject.toml
.github/workflows/: deploy.yml
ansible/: .envrc  playbook.yaml  treehouselondon.service.j2
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_remove_place_dwelling_count.py  0003_place_created_at_place_updated_at.py  0004_remove_place_member_count_alter_place_url.py  0005_alter_place_name.py
main/templates/main/: index.html  layout.html
src/treehouselondon/: __init__.py  __main__.py
src/treehouselondon/treehouse/: settings.py
treehouse/: asgi.py  settings.py  urls.py  wsgi.py
