[project]
name = "treehouselondon"
version = "0.1.0"
description = "Directory of Co-op Houses and Communes in London, England."
authors = [
    { name = "Theodore Keloglou", email = "zf@sirodoht.com" }
]
dependencies = [
    "django>=5.0.2",
    "gunicorn>=21.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[project.scripts]
hello = "treehouselondon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ansible>=9.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/treehouselondon"]
